finished excercises and assignment 1

--- a/Exercises/EN/Basic/09_Functions_Fundamentals.ipynb
+++ b/Exercises/EN/Basic/09_Functions_Fundamentals.ipynb
@@ -735,15 +735,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
     "def add(x, y):\n",
     "    return x + y\n",
     "\n",
-    "add(5)"
+    "print(add(5,10))\n",
+    "print(add(y = 10, x = 5))\n"
    ]
   },
   {
@@ -760,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +805,7 @@
        "6.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,11 +903,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7262178685562626\n"
+     ]
+    }
+   ],
    "source": [
-    "# Start your code below:\n"
+    "def find_sum(my_list):\n",
+    "    sum = 0\n",
+    "    for element in my_list:\n",
+    "        sum += float(element)\n",
+    "    return sum\n",
+    "\n",
+    "def find_length(my_list):\n",
+    "    length = 0\n",
+    "    for element in my_list:\n",
+    "        length +=1\n",
+    "    return length\n",
+    "\n",
+    "# Start your code below:\n",
+    "def mean(data_in, index):\n",
+    "    column = extract(index, data_in)\n",
+    "    return find_sum(column)/find_length(column)\n",
+    "\n",
+    "avg_price = mean(apps_data, 5)\n",
+    "print(avg_price)"
    ]
   },
   {
@@ -959,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +1004,7 @@
        "55"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
