--- a/Assignments/EN/Assignment_1.ipynb
+++ b/Assignments/EN/Assignment_1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dichlorodiphenyltrichloroethane'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "x[x.find('DiChl'):].lower().capitalize().replace(' ', '')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word 15 3.14 list\n"
+     ]
+    }
+   ],
+   "source": [
+    "A, B, C, D = 'word',15,3.14, 'list'\n",
+    "print(A,B,C,D)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,10 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w_h = input('please enter your weight and hight in kg and meter')\n",
+    "w, h = float(w_h.split(' ')[0]), float(w_h.split(' ')[1])\n",
+    "\n",
+    "BMI = w/(h**2)\n",
+    "print(BMI.floor(2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -524,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
