updated old assignment 1

--- a/Assignments/EN/Assignment_1.ipynb
+++ b/Assignments/EN/Assignment_1.ipynb
@@ -82,15 +82,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 326,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.902385858042937\n"
+     ]
+    }
+   ],
    "source": [
-    "w_h = input('please enter your weight and hight in kg and meter')\n",
-    "w, h = float(w_h.split(' ')[0]), float(w_h.split(' ')[1])\n",
+    "w,h = input('please enter your weight and hight in kg and meter').split()\n",
+    "#w, h = float(w_h.split(' ')[0]), float(w_h.split(' ')[1])\n",
     "\n",
-    "BMI = w/(h**2)\n",
-    "print(BMI.floor(2))"
+    "\n",
+    "BMI = float(w)/(float(h)**2)\n",
+    "print(BMI)"
    ]
   },
   {
@@ -107,10 +116,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normal weight\n"
+     ]
+    }
+   ],
+   "source": [
+    "if BMI < 18.5:\n",
+    "    print('Underweight')\n",
+    "elif BMI < 25:\n",
+    "    print('Normal weight')\n",
+    "elif BMI < 30:\n",
+    "    print('Pre-obesity')\n",
+    "elif BMI < 35:\n",
+    "    print('Obesity class 1')\n",
+    "elif BMI < 40:\n",
+    "    print('Obestity class 2')\n",
+    "else:\n",
+    "    print('Obestity')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "factorial = 1\n",
+    "number = int(input('please give a number'))\n",
+    "for x in range(1, number+1):\n",
+    "    factorial *= x\n",
+    "\n",
+    "print(factorial)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +180,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 327,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = []\n",
+    "i = 0\n",
+    "while i != -1:\n",
+    "    i = int(input('enter an integer pls'))\n",
+    "    l1.append(i)\n",
+    "\n",
+    "print(sum(l1[:len(l1)-1]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,10 +210,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1200"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def calc_salary(first_name, worked_h, pay_h):\n",
+    "    return round(worked_h*pay_h,2)\n",
+    "\n",
+    "calc_salary('Hannes', 80,15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,10 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A,B,C = 3.0,5.0,7.0\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,10 +258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "area = A*C/2\n",
+    "print(area)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,10 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 328,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153.93791\n"
+     ]
+    }
+   ],
+   "source": [
+    "area = C**2*3.14159\n",
+    "print(area)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,10 +308,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.0\n",
+      "28.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "area = (B + ((A-B)/2))*C\n",
+    "Area = (A+B)/2 * C\n",
+    "print(area)\n",
+    "print(Area)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,10 +336,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "area = B**2\n",
+    "print(area)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -233,10 +361,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 329,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "area = B*A\n",
+    "print(area)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,10 +386,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are no real roots\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def roots(a,b,c):\n",
+    "    try:\n",
+    "        x1 = -b + math.sqrt((b**2 - (4*a*c)))/(2*a)\n",
+    "        x2 = -b - math.sqrt((b**2 - (4*a*c)))/(2*a)\n",
+    "        print(x1,x2)\n",
+    "    except:\n",
+    "        print('there are no real roots')\n",
+    "\n",
+    "roots(1,0,-4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,21 +421,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'you can type anything'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "def distance(a,b):\n",
+    "    x1, y1 = float(a.split(' ')[0]), float(a.split(' ')[1])\n",
+    "    x2, y2 = float(b.split(' ')[0]), float(b.split(' ')[1])\n",
+    "    return math.sqrt((x1-x2)**2 +(y1-y2)**2)\n",
+    "\n",
+    "print(distance('1 1', '2 2'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,10 +450,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin\n"
+     ]
+    }
+   ],
+   "source": [
+    "def quadrants(x,y):\n",
+    "    if (x and y) == 0.0:\n",
+    "       print('origin')\n",
+    "    elif  x == 0.0 and y != 0.0:\n",
+    "        print('x axis')\n",
+    "    elif x != 0.0 and y == 0.0:\n",
+    "        print('y axis')\n",
+    "    elif x > 0 and y > 0:\n",
+    "        print('q1')\n",
+    "    elif x < 0 and y > 0:\n",
+    "        print('q2')\n",
+    "    elif x < 0 and y < 0:\n",
+    "        print('q3')\n",
+    "    elif x > 0 and y < 0:\n",
+    "        print('q4')\n",
+    "\n",
+    "quadrants(0.0, 0.0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +517,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Country</th>\n",
-       "      <th>Country calling code</th>\n",
+       "      <th>Country code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -438,36 +626,37 @@
        "</div>"
       ],
       "text/plain": [
-       "           Country Country calling code\n",
-       "0          Austria                   43\n",
-       "1          Belgium                   32\n",
-       "2         Bulgaria                  359\n",
-       "3          Croatia                  385\n",
-       "4           Cyprus                  357\n",
-       "5   Czech Republic                  420\n",
-       "6          Denmark                   45\n",
-       "7          Estonia                  372\n",
-       "8          Finland                  358\n",
-       "9           France                   33\n",
-       "10         Germany                   49\n",
-       "11          Greece                   30\n",
-       "12         Hungary                   36\n",
-       "13         Iceland                  354\n",
-       "14         Ireland                  353\n",
-       "15           Italy                   39\n",
-       "16          Latvia                  371\n",
-       "17   Liechtenstein                  423\n",
-       "18       Lithuania                  370\n",
-       "19      Luxembourg                  352"
+       "           Country Country code\n",
+       "0          Austria           43\n",
+       "1          Belgium           32\n",
+       "2         Bulgaria          359\n",
+       "3          Croatia          385\n",
+       "4           Cyprus          357\n",
+       "5   Czech Republic          420\n",
+       "6          Denmark           45\n",
+       "7          Estonia          372\n",
+       "8          Finland          358\n",
+       "9           France           33\n",
+       "10         Germany           49\n",
+       "11          Greece           30\n",
+       "12         Hungary           36\n",
+       "13         Iceland          354\n",
+       "14         Ireland          353\n",
+       "15           Italy           39\n",
+       "16          Latvia          371\n",
+       "17   Liechtenstein          423\n",
+       "18       Lithuania          370\n",
+       "19      Luxembourg          352"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import time\n",
     "df = pd.read_html('https://en.wikipedia.org/wiki/Telephone_numbers_in_Europe')[1]\n",
     "df = df.iloc[:,:2]\n",
     "df.head(20)"
@@ -475,10 +664,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 251,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lithuania\n",
+      "0.002180814743041992\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "#df_country = df[['Country']]\n",
+    "#df_code = df[['Country code']]\n",
+    "def find_country(calling_code):\n",
+    "    i = 0\n",
+    "    for x in df.get('Country code'):\n",
+    "        code = int(df.loc[i]['Country code'])\n",
+    "        if code == calling_code:\n",
+    "            print(df.loc[i]['Country'])\n",
+    "            return None\n",
+    "        i += 1\n",
+    "    print('number was not found')\n",
+    "t0 = time.time()\n",
+    "find_country(370)\n",
+    "runtime = time.time() - t0\n",
+    "print(runtime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lithuania\n",
+      "0.00011086463928222656\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_country(calling_code):\n",
+    "    i = 0\n",
+    "    for x in df.get('Country code'):\n",
+    "        if int(x) == calling_code:\n",
+    "            print(df.get('Country')[i])\n",
+    "            return None\n",
+    "        i +=1\n",
+    "\n",
+    "\n",
+    "t0 = time.time()\n",
+    "find_country(370)\n",
+    "runtime = time.time() - t0\n",
+    "print(runtime)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -489,10 +736,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 334,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "the average is 1312.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nmbr_reader(l1 = [float(x) for x in input('enter 6 integers').split(' ')]):\n",
+    "   # l1 = [n1,n2,n3,n4,n5,n6]\n",
+    "    positive_values = []\n",
+    "    for x in l1:\n",
+    "        if x > 0:\n",
+    "            positive_values.append(x)\n",
+    "    print(len(positive_values))\n",
+    "    avg = round(sum(positive_values)/len(positive_values), 1)\n",
+    "    print(f\"the average is {avg}\")\n",
+    "\n",
+    "nmbr_reader()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -503,10 +771,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 297,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "16\n",
+      "36\n",
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "def squarer(N):\n",
+    "    for x in range(0, N+1):\n",
+    "        if x%2 == 0:\n",
+    "          print(x**2)\n",
+    "    return None\n",
+    "\n",
+    "squarer(9)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -517,10 +805,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even_odd(n = int(input('please enter a number'))):\n",
+    "    if n == 0:\n",
+    "        print('null')\n",
+    "    elif n%2 == 0 and n > 0:\n",
+    "        print('even positive') \n",
+    "    elif n%2 == 0 and n < 0:\n",
+    "        print('even negative')\n",
+    "    elif n%2 != 0 and n < 0:\n",
+    "        print('odd negative')\n",
+    "    elif n%2 != 0 and n > 0:\n",
+    "        print('odd positive')\n",
+    "\n",
+    "even_odd()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -530,6 +840,48 @@
     "#### 15) Ordering problems are recurrent in the history of programming. Over time, several algorithms have been developed to fulfill this function. The simplest of these algorithms is the [**Bubble Sort**](https://en.wikipedia.org/wiki/Bubble_sort), which is based on comparisons of elements two by two in a loop of passes through the elements. Your mission, if you decide to accept it, will be to input six whole numbers ramdonly ordered. Then implement the **Bubble Sort** principle to order these six numbers **using only loops and conditionals**.  \n",
     "#### At the end, print the six numbers in ascending order on a single line separated by spaces. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 4, 8, 9, 5]\n",
+      "[2, 2, 4, 5, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "sixrandom = []\n",
+    "for x in range(0,6):\n",
+    "    sixrandom.append(random.randint(1,10))\n",
+    "\n",
+    "print(sixrandom)\n",
+    "\n",
+    "\n",
+    "def bubblesort(l1 = []):\n",
+    "    ph = 0\n",
+    "    for x in range(0,5):\n",
+    "        for y in range(0,5):\n",
+    "            if l1[y] > l1[y+1]:\n",
+    "                ph = l1[y+1]\n",
+    "                l1[y+1] = l1[y]\n",
+    "                l1[y] = ph\n",
+    "    print(l1)\n",
+    "\n",
+    "bubblesort(sixrandom)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
