--- a/Exercises/EN/Numpy_Pandas/1_Intro_to_NumPy.ipynb
+++ b/Exercises/EN/Numpy_Pandas/1_Intro_to_NumPy.ipynb
@@ -69,11 +69,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 20 30]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "import numpy as np\n",
+    "data_ndarray = np.array([10,20,30])\n",
+    "print(data_ndarray)"
    ]
   },
   {
@@ -144,7 +154,8 @@
     "        converted_row.append(float(item))\n",
     "    converted_taxi_list.append(converted_row)\n",
     "    \n",
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "taxi = np.array(converted_taxi_list)"
    ]
   },
   {
@@ -158,9 +169,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.016e+03 1.000e+00 1.000e+00 ... 1.165e+01 6.999e+01 1.000e+00]\n",
+      " [2.016e+03 1.000e+00 1.000e+00 ... 8.000e+00 5.430e+01 1.000e+00]\n",
+      " [2.016e+03 1.000e+00 1.000e+00 ... 0.000e+00 3.780e+01 2.000e+00]\n",
+      " ...\n",
+      " [2.016e+03 6.000e+00 3.000e+01 ... 5.000e+00 6.334e+01 1.000e+00]\n",
+      " [2.016e+03 6.000e+00 3.000e+01 ... 8.950e+00 4.475e+01 1.000e+00]\n",
+      " [2.016e+03 6.000e+00 3.000e+01 ... 0.000e+00 5.484e+01 2.000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "# the code below only works if you have solved task 1.2\n",
     "print(taxi)"
@@ -175,14 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "(89560, 15)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "data_ndarray = np.array([[5, 10, 15], \n",
     "                         [20, 25, 30]])\n",
-    "print(data_ndarray.shape)"
+    "print(data_ndarray.shape)\n",
+    "print(taxi.shape)"
    ]
   },
   {
@@ -312,11 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "row_0 = taxi[0]\n",
+    "rows_391_to_500 = taxi[391:501]\n",
+    "row_21_column_5 = taxi[21,5]"
    ]
   },
   {
@@ -471,11 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "column_1_4_7 = taxi[:, [1,4,7]]\n",
+    "row_99_columns_5_to_8 = taxi[99,5:8]\n",
+    "rows_100_to_200_column_14 = taxi[100:201, 14]"
    ]
   },
   {
@@ -488,10 +529,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 7] [2 5 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  9, 15])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
     "# convert the list of lists to an ndarray\n",
     "my_numbers = [[1,2,3],[4,5,6], [7,8,9]] \n",
     "my_numbers = np.array(my_numbers)\n",
@@ -502,6 +562,7 @@
     "col2 = my_numbers[:,1]\n",
     "\n",
     "# add the two columns\n",
+    "print(col1, col2)\n",
     "sums = col1 + col2\n",
     "sums"
    ]
@@ -515,9 +576,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  9, 15])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sums = my_numbers[:,0] + my_numbers[:,1]\n",
     "sums"
@@ -635,9 +707,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "182.9 12.6674260830728\n",
+      "12.6674260830728\n"
+     ]
+    }
+   ],
    "source": [
     "# Selecting only the relevant column distance\n",
     "trip_distance = taxi[:,7]\n",
@@ -647,7 +728,12 @@
     "trip_length_hours = trip_length_seconds / 3600 # 3600 seconds is one hour\n",
     "trip_mph = trip_distance_miles / trip_length_hours\n",
     "\n",
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "distance_max = trip_distance.max()\n",
+    "distance_mean = trip_distance.mean()\n",
+    "distance_mean2 = np.mean(trip_distance)\n",
+    "print(distance_max, distance_mean)\n",
+    "print(distance_mean2)"
    ]
   },
   {
@@ -758,16 +844,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[69.99 54.3  37.8  32.76 18.8 ]\n",
+      "[69.99 54.3  37.8  32.76 18.8 ]\n"
+     ]
+    }
+   ],
    "source": [
     "# get the table from above (first five rows of taxi and columns fare_amount, fees_amount, tolls_amount, tip_amount)\n",
     "fare_components = taxi[:5,[9,10,11,12]]\n",
     "# we'll compare against the first 5 rows only\n",
     "taxi_first_five = taxi[:5]\n",
     "\n",
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "fare_sums = fare_components.sum(axis = 1)\n",
+    "fare_totals = taxi_first_five[:, 13]\n",
+    "\n",
+    "print(fare_sums)\n",
+    "print(fare_totals)"
    ]
   }
  ],
@@ -787,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
