--- a/Exercises/EN/Numpy_Pandas/2_Working_with_NumPy.ipynb
+++ b/Exercises/EN/Numpy_Pandas/2_Working_with_NumPy.ipynb
@@ -46,11 +46,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(89561, 15)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Start your code here:\n"
+    "# Start your code here:\n",
+    "import numpy as np\n",
+    "taxi = np.genfromtxt('../../../Data/csv/nyc_taxis.csv', delimiter = ',')\n",
+    "taxi_shape = taxi.shape\n",
+    "print(taxi_shape)\n",
+    "taxi.dtype"
    ]
   },
   {
@@ -108,11 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(89560, 15)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Start your code here:\n"
+    "# Start your code here:\n",
+    "taxi = np.genfromtxt('../../../Data/csv/nyc_taxis.csv', delimiter = ',')[1:]\n",
+    "taxi_shape = taxi.shape\n",
+    "print(taxi_shape)"
    ]
   },
   {
@@ -139,18 +173,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(3.5) == float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(5 > 6)"
    ]
@@ -164,9 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12 14 16 18]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "print(np.array([2,4,6,8]) + 10)\n",
@@ -183,9 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True False False]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "print(np.array([2,4,6,8]) < 5)"
@@ -203,9 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True False  True]\n"
+     ]
+    }
+   ],
    "source": [
     "c = np.array([80.0, 103.4, 96.9, 200.3])\n",
     "c_bool = c > 100\n",
@@ -221,9 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[103.4 200.3]\n"
+     ]
+    }
+   ],
    "source": [
     "result = c[c_bool]\n",
     "print(result)"
@@ -241,14 +323,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13481\n"
+     ]
+    }
+   ],
    "source": [
     "# First, select just the pickup_month column (second column in the ndarray with column index 1)\n",
     "pickup_month = taxi[:,1]\n",
@@ -278,11 +368,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13333\n"
+     ]
+    }
+   ],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "february_bool = pickup_month == 2\n",
+    "february = pickup_month[february_bool]\n",
+    "february_rides = february.shape[0]\n",
+    "print(february_rides)"
    ]
   },
   {
@@ -297,9 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([\n",
     "                [1,2,3],\n",
@@ -313,9 +426,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "bool_1 = [True, False, \n",
     "        True, True]\n",
@@ -324,9 +447,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "boolean index did not match indexed array along dimension 1; dimension is 3 but corresponding boolean dimension is 4",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/pt/26yk257s5nd579ngn9gyw3k40000gn/T/ipykernel_7884/3030904066.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbool_1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: boolean index did not match indexed array along dimension 1; dimension is 3 but corresponding boolean dimension is 4"
+     ]
+    }
+   ],
    "source": [
     "print(arr[:, bool_1])"
    ]
@@ -340,9 +475,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  3]\n",
+      " [ 5  6]\n",
+      " [ 8  9]\n",
+      " [11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "bool_2 = [False, True, True]\n",
     "print(arr[:,bool_2])"
@@ -669,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
